# sphinx-new-tab-link

./: .buildinfo  CLAUDE.md  LICENSE  README.md  api.html  genindex.html  guide.en.html  guide.html  index.html  markdown-example.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yml  publish.yml  testing.yml
_sources/: api.rst.txt  guide.en.rst.txt  index.rst.txt  markdown-example.md.txt
docs/: conf.py  guide.en.rst  guide.rst  index.rst  markdown-example.md
sphinx_new_tab_link/: __init__.py
src/sphinx_new_tab_link/: __init__.py  core.py  extras.py  kasane.py  roles.py
tests/: conftest.py  helpers.py  test_custom_translator.py  test_dynamic_class.py  test_enable_referrer.py  test_method_assignment.py  test_roles.py  test_show_external_link_icon.py  test_sphinx_new_tab_link.py
tests/roots/test-default/: conf.py  index.rst
tests/roots/test-dynamic-class/: conf.py  index.rst
tests/roots/test-dynamic-class/extensions/: custom_translator.py
tests/roots/test-enable-referrer/: conf.py  index.rst
tests/roots/test-external-link-icon/: conf.py  index.rst
tests/roots/test-method-assignment/: conf.py  index.rst
tests/roots/test-method-assignment/extensions/: custom_translator.py
tests/roots/test-roles/: index.rst
tests/sphinx_new_tab_link/: test_build_dirhtml.py  test_build_html.py  test_build_singlehtml.py
