[project]
name = "sphinx-new-tab-link"
description = "Open external links in new tabs of the browser in Sphinx HTML documents"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["sphinxcontrib-extdevhelper-kasane"]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["pytest", "pytest-randomly", "defusedxml", "beautifulsoup4"]
typecheck = ["mypy", "types-docutils", "types-beautifulsoup4"]
lint = ["flake8", "black", "isort", "autoflake", "pyupgrade"]
dev = ["taskipy"]

[project.urls]
Homepage = "https://github.com/ftnext/sphinx-new-tab-link"
Guide = "https://ftnext.github.io/sphinx-new-tab-link/guide.en.html"
"Bug Tracker" = "https://github.com/ftnext/sphinx-new-tab-link/issues"

[tool.setuptools.dynamic]
version = { attr = "sphinx_new_tab_link.__VERSION__" }

[tool.mypy]
exclude = ["tests/roots"]
ignore_missing_imports = true

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest -v -x --ff"
post_test = "task check"
format = "task format_autoflake && task format_pyupgrade && task format_black && task format_isort"
format_autoflake = "autoflake --in-place --remove-all-unused-imports $(find src tests -name '*.py') setup.py"
format_pyupgrade = "pyupgrade $(find src tests -name '*.py') setup.py"
format_black = "black -l 79 src tests setup.py"
format_isort = "isort --profile black -l 79 src tests setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 src tests"
check_mypy = "mypy src tests"
