[metadata]
name = sphinx-new-tab-link
version = 0.2.1
url = https://github.com/ftnext/sphinx-new-tab-link
author = nikkie
author_email = takuyafjp+develop@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = MIT
description = Open external links in new tabs of the browser in Sphinx HTML documents
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Guide = https://ftnext.github.io/sphinx-new-tab-link/guide.en.html
    Bug Tracker = https://github.com/ftnext/sphinx-new-tab-link/issues

[options]
packages = find:
install_requires =
    Sphinx

[options.extras_require]
testing =
    pytest
    beautifulsoup4
lint =
    flake8
    black
    isort
dev =
    wheel
    build
    twine

[options.packages.find]
exclude = tests
